# game-generated

./: .gdlintrc  .gitignore  LICENSE  NOTICE  README.md  dungeon.gdextension  dungeon.gdextension.uid  export_presets.cfg  gdlintrc  project.godot
.github/workflows/: ci.yml  release.yml
assets/shaders/: ascension_card.gdshader  ascension_card.gdshader.uid  dissolve.gdshader  dissolve.gdshader.uid  elemental_orb.gdshader  elemental_orb.gdshader.uid  elite_aura.gdshader  elite_aura.gdshader.uid  hit_flash.gdshader  hit_flash.gdshader.uid  hub_beacon.gdshader  hub_beacon.gdshader.uid  hub_mirror.gdshader  hub_mirror.gdshader.uid  hub_portal.gdshader  hub_portal.gdshader.uid  hub_wardrobe.gdshader  hub_wardrobe.gdshader.uid  lava_pulse.gdshader  lava_pulse.gdshader.uid  low_hp_vignette.gdshader  low_hp_vignette.gdshader.uid  melee_slash.gdshader  melee_slash.gdshader.uid  outline.gdshader  outline.gdshader.uid  pillar_glow.gdshader  pillar_glow.gdshader.uid  rarity_glow.gdshader  rarity_glow.gdshader.uid  resource_globe.gdshader  resource_globe.gdshader.uid  shield_bar.gdshader  shield_bar.gdshader.uid  status_dial.gdshader  status_dial.gdshader.uid  whirlwind_vortex.gdshader  whirlwind_vortex.gdshader.uid
assets/ui/: app_icon.webp.import  banner.webp.import  btn_back.png.import  btn_back.tres  btn_blank.png.import  btn_blank.tres  btn_choose.png.import  btn_choose.tres  btn_play.png.import  btn_play.tres  btn_quit.png.import  btn_quit.tres  cover.webp.import  cover_sm.webp.import  icon_dexterity.png.import  icon_gold.png.import  icon_heart.png.import  icon_intelligence.png.import  icon_mana.png.import  icon_strength.png.import  loading_bar_accent.tres  loading_screen.webp.import  panel_card.png.import  panel_card.tres  panel_dialog.tres  panel_dialog.webp.import  panel_hud.png.import  panel_hud.tres  panel_main.png.import  storefront.json  theme.tres  title_poster.webp.import  title_poster_sm.webp.import  wordmark_title.webp.import  xp_bar.gdshader  xp_bar.gdshader.uid
dungeon/: Cargo.toml  build_all.sh
dungeon/.cargo/: config.toml
dungeon/src/: affix.rs  bridge.rs  graph.rs  lib.rs  rng.rs
dungeon/tests/: generation.rs
scenes/: main.tscn
scenes/ai/: enemy_melee_bt.tres  enemy_ranged_bt.tres  enemy_spider_bt.tres  minion_bt.tres  spirit_bt.tres
scenes/entities/: boss.tscn  enemy.tscn  necro_minion.tscn  player.tscn  remote_player.tscn  spirit_pet.tscn
scenes/pickups/: gold_drop.tscn  loot_chest.tscn  merchant.tscn  wave_portal.tscn  xp_drop.tscn
scenes/skills/: skill_arcane_flameblade.tscn  skill_aura_zone.tscn  skill_barb_banner.tscn  skill_barb_blood_frenzy.tscn  skill_barb_bloodstorm.tscn  skill_barb_chain_hook.tscn  skill_barb_commanding_shout.tscn  (+111 more)
server/: Cargo.toml  Dockerfile  Dockerfile.slim  README-RU.md  README.md  docker-compose.yml
server/benches/: routing.rs
server/src/: api.rs  lib.rs  main.rs  protocol.rs  room.rs  router.rs
server/tests/: api_tests.rs
tests/: gem_system_test.gd  gem_system_test.gd.uid  gem_system_test.tscn  smoke_test.gd  smoke_test.gd.uid  smoke_test.tscn  talent_test.gd  talent_test.gd.uid  talent_test.tscn
(+1058 files in other folders)
